# conversational-search

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/infra/: action.yaml
.github/workflows/: cd.yaml  ci.yaml  codeql.yaml  deploy-infra.yaml  deploy-vectordb.yaml  etl-job.yaml
configs/: config.yaml
docker/vllm/: Dockerfile
manifests/benchmark-job/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/benchmark-job/templates/: job.yaml
manifests/etl-job/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/etl-job/templates/: job.yaml
manifests/qdrant-chart/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
manifests/qdrant-chart/templates/: ilb.yaml  service-attachment.yaml
scripts/: deploy_cloudrun_svc.sh  run_terraform.sh
src/: benchmark_vdb.py  etl_vectordb.py  evaluate_queries.py  main.py
src/agents/: base.py  expander.py  hm_agent.py  hm_parallel_agent.py  moderator.py  router.py
src/core/: config.py  logger.py  runner.py  sql_loader.py  token_manager.py
src/database/: qdrant_manager.py
src/embeddings/: text_embeddings.py
src/queries/: extract_vectors.sql
terraform/: .terraform.lock.hcl  dev.tfvars  main.tf  outputs.tf  prod.tfvars  providers.tf  variables.tf  versions.tf
terraform/modules/cloud_storage/: main.tf  variables.tf
tests/: conftest.py
tests/integration_tests/: test_qdrant_integration.py
tests/performance_tests/: test_agent_performance.py  test_qdrant_performance.py
(+23 files in other folders)
